[gd_scene load_steps=5 format=3 uid="uid://blyc1n36gv656"]

[ext_resource type="Script" path="res://addons/websocket/WebSocket.gd" id="1_ek0ep"]
[ext_resource type="Script" path="res://src/ui/game_lobby/game_lobby.gd" id="1_r1w5h"]
[ext_resource type="Theme" uid="uid://cl2j3s4xbbpfv" path="res://resources/themes/lobby_theme.tres" id="1_x5gda"]
[ext_resource type="PackedScene" uid="uid://ckedmu13ieyr4" path="res://src/game_world/levels/first_world_wrapper.tscn" id="3_dg1gk"]

[node name="GameLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_x5gda")
script = ExtResource("1_r1w5h")
first_level_scene = ExtResource("3_dg1gk")

[node name="LoginScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LoginScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = -98.5
offset_right = 158.0
offset_bottom = 98.5
grow_horizontal = 2
grow_vertical = 2

[node name="NicknameEdit" type="LineEdit" parent="LoginScreen/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter nickname"

[node name="RoleOptionButton" type="OptionButton" parent="LoginScreen/VBoxContainer"]
layout_mode = 2
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "Any role"
popup/item_0/id = 0
popup/item_1/text = "Mech"
popup/item_1/id = 1
popup/item_2/text = "Virus"
popup/item_2/id = 2

[node name="JoinButton" type="Button" parent="LoginScreen/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="ErrorMessageLabel" type="Label" parent="LoginScreen"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -440.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.247059, 0.117647, 1)
theme_override_font_sizes/font_size = 80
text = "Invalid nickname"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LocalGameMenu" type="HBoxContainer" parent="LoginScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -454.5
offset_top = -280.0
offset_right = 454.5
offset_bottom = -189.0
grow_horizontal = 2
grow_vertical = 0

[node name="HostButton" type="Button" parent="LoginScreen/LocalGameMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Host own game"

[node name="JoinLocalButton" type="Button" parent="LoginScreen/LocalGameMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Join local game"

[node name="WainitgScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayersList" type="VBoxContainer" parent="WainitgScreen"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_right = 256.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="InviteWindow" type="VBoxContainer" parent="WainitgScreen"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -412.5
offset_top = -62.5
offset_right = 412.5
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="WainitgScreen/InviteWindow"]
layout_mode = 2
text = "Player capybara94888u invites your yo play"
horizontal_alignment = 1

[node name="Optinos" type="HBoxContainer" parent="WainitgScreen/InviteWindow"]
layout_mode = 2

[node name="AcceptButton" type="Button" parent="WainitgScreen/InviteWindow/Optinos"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accept"

[node name="RejectButton" type="Button" parent="WainitgScreen/InviteWindow/Optinos"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reject"

[node name="WebSocket" type="Node" parent="."]
script = ExtResource("1_ek0ep")
host = "45.95.203.78:9090"
use_WSS = false

[connection signal="pressed" from="LoginScreen/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="LoginScreen/LocalGameMenu/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="LoginScreen/LocalGameMenu/JoinLocalButton" to="." method="_on_join_local_button_pressed"]
[connection signal="pressed" from="WainitgScreen/InviteWindow/Optinos/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="WainitgScreen/InviteWindow/Optinos/RejectButton" to="." method="_on_reject_button_pressed"]
[connection signal="closed" from="WebSocket" to="." method="_on_web_socket_closed"]
[connection signal="connect_failed" from="WebSocket" to="." method="_on_web_socket_connect_failed"]
[connection signal="connected" from="WebSocket" to="." method="_on_web_socket_connected"]
[connection signal="received" from="WebSocket" to="." method="_on_web_socket_received"]
